--- a/luck-game/package.json
+++ b/luck-game/package.json
@@ -1,5 +1,6 @@
 {
   "name": "luck-game",
+  "homepage": "https://nurlanua.github.io/children-game/luck-game",
   "private": true,
   "version": "0.0.0",
   "type": "module",
