--- a/luck-game/package.json
+++ b/luck-game/package.json
@@ -8,8 +8,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist -r https://github.com/nurlanua/children-game.git"
+    "predeploy": "npm run build && node move-dist-to-luckgame.cjs",
+    "deploy": "gh-pages -d temp-deploy -r https://github.com/nurlanua/children-game.git -b gh-pages -m \"Deploy luck-game\""
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -19,6 +19,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "fs-extra": "^11.3.0",
     "gh-pages": "^6.3.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
